FILE(GLOB_RECURSE EXAMPLE_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.c)


SET(EXAMPLE_TARGET _${EXAMPLE_BINARY})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include /usr/local/include)

ADD_EXECUTABLE(${EXAMPLE_TARGET} ${EXAMPLE_SOURCES})

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

TARGET_LINK_LIBRARIES(${EXAMPLE_TARGET} ${PROJECT_NAME} pthread event event_pthreads boost_log boost_log_setup boost_system boost_thread hiredis)

SET_TARGET_PROPERTIES(${EXAMPLE_TARGET} PROPERTIES OUTPUT_NAME ${EXAMPLE_BINARY})

