FILE(GLOB_RECURSE TESTS_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.c)


SET(TESTS_TARGET _${TESTS_BINARY})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include  ${PROJECT_SOURCE_DIR}/tst) 

ADD_EXECUTABLE(${TESTS_TARGET} ${TESTS_SOURCES})

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

TARGET_LINK_LIBRARIES(${TESTS_TARGET}  pthread boost_log_setup boost_log  boost_system boost_thread event event_pthreads  hiredis gtest)

SET_TARGET_PROPERTIES(${TESTS_TARGET} PROPERTIES OUTPUT_NAME ${TESTS_BINARY})


