FILE(GLOB_RECURSE TESTS_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.c)


set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CCXX_FLAGS} -Wpmf-conversions")


SET(TESTS_DT_TARGET _${TESTS_DT_BINARY})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/test/DT/include)

ADD_EXECUTABLE(${TESTS_DT_TARGET} ${TESTS_SOURCES})

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

TARGET_LINK_LIBRARIES(${TESTS_DT_TARGET} ${PROJECT_NAME} pthread event event_pthreads boost_system hiredis)

SET_TARGET_PROPERTIES(${TESTS_DT_TARGET} PROPERTIES OUTPUT_NAME ${TESTS_DT_BINARY})
