FILE(GLOB_RECURSE TESTS_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.c)


set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CCXX_FLAGS} -Wpmf-conversions")


SET(TESTS_DT_TARGET _${TESTS_DT_BINARY})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/tst/DT/include)

ADD_EXECUTABLE(${TESTS_DT_TARGET} ${TESTS_SOURCES})

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

TARGET_LINK_LIBRARIES(${TESTS_DT_TARGET} pthread boost_log_setup boost_log  boost_system boost_thread hiredis event event_pthreads gtest)

SET_TARGET_PROPERTIES(${TESTS_DT_TARGET} PROPERTIES OUTPUT_NAME ${TESTS_DT_BINARY})
