FILE(GLOB_RECURSE TESTS_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.c)

SET(TESTS_UT_TARGET _${TESTS_UT_BINARY})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

ADD_EXECUTABLE(${TESTS_UT_TARGET} ${TESTS_SOURCES})

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

TARGET_LINK_LIBRARIES(${TESTS_UT_TARGET} ${PROJECT_NAME} pthread event event_pthreads boost_system hiredis)

SET_TARGET_PROPERTIES(${TESTS_UT_TARGET} PROPERTIES OUTPUT_NAME ${TESTS_UT_BINARY})
